--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title></title>
+    <!-- <script type="text/javascript" src="./src/assets/js/world.js"></script> -->
   </head>
   <body>
     <div id="app">
